 * scintilla/ScintillaGTK.cxx:
   Fix wrong target list for PRIMARY clipboard.


2007-05-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/filetypes.c, src/symbols.c, tagmanager/parsers.h,
   tagmanager/makefile.win32, tagmanager/haskell.c,
   tagmanager/Makefile.am:
   Add Haskell tags support from CTags patch on sf.net written by Peter
   Strand (thanks).


2007-05-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * tagmanager/read.c, tagmanager/read.h, tagmanager/get.h:
   Move C-only isident(), isident1() functions to get.h.


2007-05-21  Enrico Tröger  <enrico.troeger@uvena.de>

 * NEWS, geany_private.rc, win32-config.h, doc/geany.1.in,
   doc/geany.docbook, doc/geany.txt, doc/images/*, doc/html/*:
   Updated for Geany 0.11.
 * New release: Geany 0.11 "Bandor".
 * configure.in, geany.nsi, geany_private.rc, win32-config.h,
   src/geany.h: Post-release version bump.


2007-05-16  Enrico Tröger  <enrico.troeger@uvena.de>

 * THANKS, src/about.c, po/LINGUAS, po/bg.po:
   Added Bulgarian translation (Thanks to Dilyan Rusev).


2007-05-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c:
   Fix bug when loading custom filetypes.common styles.
 * src/sci_cb.c:
   Add workaround for PHP/TCL closing brace de-indenting.


2007-05-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, data/filetypes.common:
   Show fold line by default (so it's clearer there are hidden lines).


2007-05-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * scintilla/ScintillaGTK.cxx:
   Fixed wrong clipboard target (closes #1711483).
 * doc/geany.docbook, src/callbacks.c:
   Hide notebooks tabs instead of sidebar when toggling additional
   widgets.
 * doc/geany.docbook, src/about.c, src/build.c, src/dialogs.c,
   src/keybindings.c, src/project.c, src/symbols.c, src/tools.c,
   src/ui_utils.c: Added many widget names to different dialogs for use
                   with custom styles. Menu items still don't work.